Fix graph visualizer

--- a/_posts/2020-11-26-Brief.md
+++ b/_posts/2020-11-26-Brief.md
@@ -187,7 +187,7 @@ The volunteering work was evaluated in terms of "effective working hours", which
 
 I enrolled in the "Algorithm and Problem Solving" course in the fall 2020 semester. I find either the data structure and algorithm sections really interesting. The course have a sharing session for students to make presentations on given topics. I registered for the topic "Dijkstra Algorithm" and made a general purpose html application for visualization of graphs.
 
-<iframe id="GV" onload="resize_iframe('GV', 1)" style="width: 100%; border: none; background: #0001; overflow: hidden" src="//dev.yuxuanzhang.net/Lab/GraphVisualizer/app"></iframe>
+<iframe id="GV" onload="resize_iframe('GV', 1)" style="width: 100%; border: none; background: #0001; overflow: hidden" src="//dev.yuxuanzhang.net/Lab/GraphVisualizer/app.html"></iframe>
 
 As is shown above, this application has an elaborately designed graphic user interface which enables users to have insight into the procedures of graph related algorithms. This experience is also crucial to me since I have successfully utilized computer technologies to help demonstrate my ideas.
 
