--- a/_posts/2020-11-26-Brief.md
+++ b/_posts/2020-11-26-Brief.md
@@ -137,7 +137,7 @@ I took the "Intro to Digital Circuit" course at fall 2019 semester. I decided to
 
 This application is easy to integrate into any web page, as is shown below. It accepts input as either true-value list (`m(1,3,...)`) or classical logic expression (`A + B * C + #D` equals "A or (B and C) or (not D)").
 
-<iframe id="LES" onload="resize_iframe('LES', 0.75)" style="width: 100%; border: none; background: #0001;" src="//dev.yuxuanzhang.net/lib/modules/LogicExpression/app#/AB+AC+ABCD"></iframe>
+<iframe id="LES" onload="resize_iframe('LES', 0.75)" style="width: 100%; border: none; background: #0001;" src="//dev.yuxuanzhang.net/lib/modules/LogicExpression/app.html#/AB+AC+ABCD"></iframe>
 
 <a name="Event-live system"></a>
 
