Fix improper naming

--- a/_posts/2020-11-26-Brief.md
+++ b/_posts/2020-11-26-Brief.md
@@ -25,7 +25,7 @@ tags:
   - [LBNL ATLAS Affiliate](#LBNL ATLAS Affiliate)
   - [UCAS Summer School](#UCAS Summer School)
 * *Junior Year*
-  - [Calculation Physics × MATLAB](#Calculation Physics × MATLAB)
+  - [Computational Physics × MATLAB](#Calculation Physics × MATLAB)
   - [Digital Circuit course works](#Digital Circuit course works)
   - [Event-live system](#Event-live system)
   - [Big data course works](#Big data course works)
